still stuck on both issues--turning in retro

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,25 +53,23 @@ body {
   width: 75%;
   margin: 1rem auto;
 }
-.save-button {
+.save-button, .update-button, .delete-button {
   position: absolute;
-  top: 25px;
+  top: 125px;
   right: 25px;
   border: 1px solid grey;
   padding: 5px 10px;
   background-color: lightseagreen;
 }
-.save-button:hover, .update-button:hover {
+.save-button:hover, .update-button:hover, .delete-button:hover {
   background-color: green;
   color: white;
 }
 .update-button{
-  position: absolute;
+  top: 25px;
+}
+.delete-button{
   top: 75px;
-  right: 25px;
-  border: 1px solid grey;
-  padding: 5px 10px;
-  background-color: lightseagreen;
 }
 
 .home-button {
